# reasoning-and-agents-education

./: L04_Introduction_to_TestTimeCompute_for_LLM_Reasoning_student.ipynb  pyproject.toml
project1/: P01_Enhancing_Reasoning_Capability_in_LLMs_student copy.ipynb  P01_Enhancing_Reasoning_Capability_in_LLMs_student.ipynb  instruction1.txt
