[project]
name = "reasoning-and-agents-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.5",
    "litellm>=1.82.1",
    "math-verify>=0.9.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "peft>=0.18.1",
    "pygame>=2.6.1",
    "scipy>=1.17.1",
    "trl>=0.24.0",
    "unsloth>=2026.3.4 ; sys_platform == 'linux'",
    "vllm>=0.17.0 ; sys_platform == 'linux'",
]
